syntax = "proto3";

package course;

option go_package = "github.com/sudhin-az/E-LEARNING-GRPC/course-service/proto";

service CourseService {
    rpc CreateCourse (CourseRequest) returns (CourseResponse);
    rpc GetAllCourses (Empty) returns (CourseList);
    rpc EnrollCourse (EnrollRequest) returns (EnrollResponse);
}

message CourseRequest {
    string title = 1;
    string description = 2;
}

message CourseResponse {
    string id = 1;
    string title = 2;
    string description = 3;
}

message Empty{}

message Course {
    string id = 1;
    string title = 2;
    string description = 3;
}

message CourseList {
    repeated Course co
}

message EnrollRequest {
    string userId = 1;
    string courseId = 2;
}

message EnrollResponse {
    string message = 1;
}
